2007-04-08  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-comp.el (skk-comp-smart-find): Return nil unless
	skk-abbrev-mode.  Set skk-smart-find-file-path to nil when
	skk-abbrev-mode is nil.

	(skk-comp-lisp-symbol):
	(skk-search-lisp-symbol):

	New functions.

	* skk-e21.el (skk-tooltip-show-at-point): Adjust mouse position in
	non-follow mode.

	* skk-vars.el: Custom-related modifications to skk-init-file,
	skk-large-jisyo, skk-aux-large-jisyo, skk-jisyo, skk-backup-jisyo,
	skk-show-icon, skk-use-kana-keyboard, and skk-tut-file.  Define
	groups skk-kanagaki and akk-nicola here.

	(skk-comp-lisp-symbols): New variable.

2007-04-07  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK: Add APEL_DIR to load-path before loading install.el.
	(SKK_DICTIONARIES): Add dictionaries.

	* context-skk.el: Modify parent group for "context-skk" group.

	* skk-annotation.el (skk-annotation-wait-for-input): Suppress
	warning caused by `split-string' incompatibility.
	(skk-annotation-wikipedia): For Wiktionary, downcase WORD when
	needed.
	(skk-annotation-wikipedia-1): Support for Translingual Symbols
	such as Greek alphabet.  Remove unnecessary local bindings.

	* skk-comp.el (skk-comp-smart-find):
	(skk-smart-find):
	(skk-search-smart-find):

	New functions.

	* skk-e21.el: Suppress warnings for Emacs 21.

	* skk-vars.el: Whole review and update for custom groups and
	widget types.

	(skk-smart-find-file-path):
	(skk-smart-find-ignored-file-regexp):
	(skk-comp-smart-find-files):

	New variables.

	* skk.el (skk-search-identity): New function.
	(skk-completion-wrapper): Rename from anonymous function assigned
	to [tab].

2007-04-07  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-wikipedia-1): Code cleanups.
	Remove unnecessary variables and procedures.
	Add "Acronym" as a Category.

	* skk-vars.el (skk-annotation-wikipedia-sources):
	(skk-annotation-wikipedia-key):
	(skk-tooltip-parameters):

	Fix for custom types.
